--- a/code/packaging/app-config/src/main/resources/META-INF/cattle/process/defaults.properties
+++ b/code/packaging/app-config/src/main/resources/META-INF/cattle/process/defaults.properties
@@ -96,8 +96,8 @@ machine.driver.config=file:///var/lib/rancher/etc/machinedrivers.json
 compose.executor.service.executable=rancher-compose-executor
 compose.executor.execute=false
 
-catalog.service.executable=rancher-catalog-service
-catalog.execute=false
+catalog.service.executable=/Users/rajashree/go-work/src/github.com/rancher/catalog-service/catalog-service
+catalog.execute=true
 
 traefik.executable=traefik
 traefik.execute=false
@@ -115,15 +115,15 @@ telemetry.service.executable=telemetry
 registry.default=
 registry.whitelist=
 
-auth.service.executable=rancher-auth-service
-auth.service.execute=false
+auth.service.executable=/Users/rajashree/go-work/src/github.com/rancher/rancher-auth-service/rancher-auth-service
+auth.service.execute=true
 auth.service.log.level=INFO
 
 api.auth.local.validate.url=
 api.auth.local.validate.description=
 api.auth.local.validate.timeout.milliseconds=10000
 
-webhook.service.executable=webhook-service
-webhook.service.execute=false
+webhook.service.executable=/Users/rajashree/go-work/src/github.com/rancher/webhook-service/webhook-service
+webhook.service.execute=true
 
 api.auth.restrict.concurrent.sessions=false
